# python_labs

./: .coverage  README.md  pyproject.toml
data/lab04/: input.txt
data/lab08/: students_input.json
data/lab09/: students.csv
data/samples/: test.txt
scr/data/lab04/: report.csv
scr/lab01/: ex03.py  ex05.py
scr/lab02/: ex04.py  ex06.py
scr/lab04/: io_txt_csv.py  text_report.py
scr/lib/: text.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/lab01/: README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py
src/lab02/: README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py
src/lab03/: README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: io_helpers.py  text.py
src/tests/: test_json_csv.py  test_text.py
tests/: test_json_csv.py  test_text.py
