[project]
name = "labs"
version = "0.1.0"
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.6"
]
dependencies = [
  "requests>=2.32",
  "pandas>=2.2"
]
[tool.black]
line-length = 88
target-version = ['py313'] 
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--verbose", "--cov=src"]